# openapiart

./: .flake8  .gitignore  .golangci.yaml  Dockerfile  LICENSE  MANIFEST.in  MODELGUIDE.md  README.md  artifacts.py  build.py  do.py  generate_requirements.py  goserver_artifacts.py  pyproject.toml  readme.md  requirements.txt  setup.py  test_requirements.txt
api/: openapi.yaml
artifacts/: openapi.json  openapi.proto  openapi.yaml  sanity.proto
doc/: index.html
docs/: otlp.md
openapiart/: __init__.py  __main__.py  bundler.py  common.go  common.go.tmp  common.py  common_test.go  enum.go  generate_from_yaml.py  generate_requirements.py  generator.py  gotidy.py  loggers.go  openapiart.py  openapiartcli.py  openapiartgo.py  openapiartplugin.py  openapiartprotobuf.py  openapiartpython.py  requirements.py  requirements.txt  sample_log_test.go  schema.go  telemetry.go  test_requirements.txt
otlp/: otlp.md
pine_flag/: pine_flag.yaml  pine_flag2.yaml
pkg/: choice_test.go  common.go  common_test.go  consistent_error_test.go  default_test.go  enum.go  expected.json  generated_invalid_format_test.go  generated_invalid_key_test.go  generated_required_test.go  generated_test.go  generated_validate_test.go  go.mod  go.sum  gopine.go  httpserver_test.go  loggers.go  marshal_test.go  mock_HTTPserver_test.go  mock_grpcserver_test.go  mock_httpserver_test.go  mock_server_test.go  multiple_iter_test.go  normal_test.go  oid_format_test.go  openapiart.go  perf_test.go  property_with_name_string_test.go  required_test.go  schema.go  serdes_test.go  status_msg_test.go  telemetry.go  (+6 more)
(+310 files in other folders)
